--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.13.0",
-        "@angular/cli": "~7.0.3",
+        "@angular-devkit/build-angular": "^0.13.8",
+        "@angular/cli": "^7.3.8",
         "@angular/compiler-cli": "^7.2.6",
         "@angular/language-service": "^7.0.1",
         "@types/jasmine": "~2.8.9",
@@ -37,7 +37,7 @@
         "codelyzer": "~4.5.0",
         "jasmine-core": "~3.3.0",
         "jasmine-spec-reporter": "~4.2.1",
-        "karma": "^4.0.0",
+        "karma": "^4.1.0",
         "karma-chrome-launcher": "~2.2.0",
         "karma-coverage-istanbul-reporter": "~2.0.4",
         "karma-jasmine": "~1.1.1",
